[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/0x72_DungeonTilesetII_v1.4.png" type="Texture" id=1]
[ext_resource path="res://World/Door.gd" type="Script" id=2]

[sub_resource type="Animation" id=3]
resource_name = "Close"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 48 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 24 )

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( -2, -12, 2, -12, 2, 12, -2, 12 )

[node name="Door" type="Position2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Close = SubResource( 3 )
anims/Open = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 128, 32, 32 )

[node name="Sprite2" type="Sprite" parent="StaticBody2D"]
position = Vector2( 0, 8 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 128, 32, 32 )

[node name="Area2D" type="Area2D" parent="StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Area2D"]
position = Vector2( 0, 16 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="StaticBody2D"]
scale = Vector2( 2, 2 )
occluder = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="StaticBody2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="StaticBody2D/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
